--- a/ProNatur-Biomarkt GmbH/ProNatur-Biomarkt GmbH.csproj
+++ b/ProNatur-Biomarkt GmbH/ProNatur-Biomarkt GmbH.csproj
@@ -52,10 +52,19 @@
     <Compile Include="LoadingScreen.Designer.cs">
       <DependentUpon>LoadingScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainMenuScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainMenuScreen.Designer.cs">
+      <DependentUpon>MainMenuScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="LoadingScreen.resx">
       <DependentUpon>LoadingScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenuScreen.resx">
+      <DependentUpon>MainMenuScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +91,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GroceryImg.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BtnImgProducts.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BtnImgBill.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
